php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #22585 Minor errors halt a script because of E_ERROR
Submitted: 2003-03-07 04:41 UTC Modified: 2003-03-07 08:08 UTC
From: dexter@php.net Assigned:
Status: Closed Package: LDAP related
PHP Version: 4CVS-2003-03-07 (stable) OS: all
Private report: No CVE-ID: None
 [2003-03-07 04:41 UTC] dexter@php.net
Each error messages with E_ERROR level shoud be replaced 
with E_WARNING level. There is no reason to halt a script 
after minor problem with database, especially for "Unknown 
attribute in the data" message. 
 

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-03-07 08:08 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC