Fixed bug #22585 (Do not terminate the script on minor errors).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@119396 c90b9560-bf6c-de11-be94-00142212c4b1